# table-pyqt6

./: .gitignore  README.md  main.py  pyproject.toml
blackbox/: example.py  run.py
blackbox/app/: __init__.py  main_window.py
blackbox/app/bar/: __init__.py  filebar.py
blackbox/app/static/: __init__.py
blackbox/app/static/namespace/: en_labels.json  shortcuts.json
blackbox/app/table/: __init__.py  loader.py  table.py
blackbox/app/table/dialogs/: __init__.py  finder.py  replacer.py
src/: run.py
src/app/: __init__.py  main_window.py
src/app/bar/: __init__.py  filebar.py
src/app/static/namespace/: en_labels.json  ru_labels.json
src/app/table/: __init__.py  loader.py  table.py
src/app/table/dialogs/: __init__.py  finder.py  replacer.py
