[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Harutyun <106912298+HarutyunAg@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.10.0"
pandas = "^2.2.2"
pyqt6 = "^6.7.0"
pyside2 = "^5.15.2.1"
numpy = "1.26.4"
openpyxl = "^3.1.5"
loguru = "^0.7.2"
flake8 = "^7.1.1"
pyright = "^1.1.384"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
