[project]
name = "blackbox-pyqt6-table"
version = "0.2.3"
description = "Ready2Use editable table for PyQt6 apps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.2,<0.8",
    "numpy==1.26.4",
    "openpyxl>=3.1.5,<4",
    "pandas>=2.2.2,<3",
    "pyqt6>=6.7.0,<7",
    "pyside2>=5.15.2.1,<6",
]
